# scion

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml  scion.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: README.md
examples/bomberman/: README.md  bomb_animations.rs  bomb_system.rs  char_animations.rs  character_control_system.rs  level_reader.rs  main.rs
examples/bomberman/assets/: test_map.json
examples/feature-showcase/: main.rs  scene.rs
examples/feature-showcase/assets/: demo-ply.scion  test-lvl.scion
examples/hello-world/: main.rs
examples/jezzball/: README.md  inputs_layer.rs  main.rs  main_layer.rs  main_scene.rs  tilemap_update_layer.rs  utils.rs
examples/jezzball/systems/: ball.rs  lines.rs  mod.rs
examples/mario/: README.md  character_control_system.rs  collisions_system.rs  main.rs
examples/mario-bis/: README.md  character_control_system.rs  level_reader.rs  main.rs  model.rs  scene.rs
examples/mario-bis/assets/: level1.json  level1.tmx  map1.json  mario-tileset.tsx  tileset_atlas.json
examples/mario/assets/: level.csv
examples/new-bark-town/: animations.rs  character_control_system.rs  level_reader.rs  main.rs  scene.rs
examples/new-bark-town/assets/: nbt_atlas.json  tileset_atlas.json
examples/new-bark-town/assets/scenes/: lab.json  main_house_bedroom.json  main_house_floor.json  new_bark_town.json  npc_house.json  npc_house_2.json
examples/pixel-adventures/: character.rs  main.rs  scene.rs
examples/pixel-adventures/assets/: map1_structures.csv
examples/starlight-1961/: asset_package_config.rs  level_scene.rs  main.rs  main_menu_scene.rs
examples/starlight-1961/assets/: lvl1.scion  main_config.json  space_ship.scion  tileset_main.scion
examples/starlight-1961/assets/tiled/: lvl1.tmx  space_ship.tsx  tileset_main.tsx
examples/starlight-1961/scripts/: background_parallax.rs  mod.rs  ship.rs
examples/taquin/: README.md  animations.rs  main.rs
examples/tetris/: README.md  components.rs  layer.rs  main.rs  resources.rs  scene.rs
examples/tetris/systems/: mod.rs  move_system.rs  piece_system.rs  rotation_system.rs  score_system.rs
examples/world-cup/: main.rs
src/: application.rs  game_layer.rs  lib.rs  state.rs
src/config/: logger_config.rs  mod.rs  scion_config.rs  window_config.rs
src/core/: application_builder.rs  audio_controller.rs  event_handler.rs  game_layer.rs  legion_ext.rs  mod.rs  package.rs  scene.rs  scheduler.rs  scion_runner.rs  state.rs  world.rs
src/core/components/: animations.rs  color.rs  material.rs  mod.rs  sprite.rs
src/core/components/maths/: camera.rs  collider.rs  coordinates.rs  hierarchy.rs  mod.rs  padding.rs  transform.rs  vector.rs
src/core/inputs/: keycode.rs  mod.rs
src/core/resources/: asset_manager.rs  audio.rs  focus_manager.rs  font_atlas.rs  global_storage.rs  inputs.rs  keyboard.rs  mod.rs  sound.rs  time.rs  window.rs
src/core/systems/: animations_system.rs  asset_ref_resolver_system.rs  collider_systems.rs  default_camera_system.rs  focus_systems.rs  hide_propagation_system.rs  hierarchy_system.rs  missing_ui_component_system.rs  mod.rs  parent_transform_system.rs  ui_button_systems.rs  ui_input_systems.rs  ui_text_system.rs
src/graphics/: mod.rs
src/graphics/components/: animations.rs  color.rs  material.rs  mod.rs
src/graphics/rendering/: gl_representations.rs  mod.rs  renderer_state.rs  rendering_texture_management.rs  rendering_thread.rs  scion2d.rs
src/graphics/windowing/: input_event_handler.rs  mod.rs  window_event_handler.rs
src/inputs/: mod.rs  mouse.rs
src/renderer/: color.rs  mod.rs  renderer_state.rs
src/renderer/bidimensional/: gl_representations.rs  material.rs  mod.rs  renderer.rs  scion2d.rs  transform.rs  triangle.rs
src/rendering/: color.rs  gl_representations.rs  mod.rs  renderer_state.rs  rendering_texture_management.rs  scion2d.rs
src/rendering/bidimensional/: camera.rs  gl_representations.rs  material.rs  mod.rs  scion2d.rs  transform.rs
src/rendering/shaders/: main_shader.wgsl  pipeline.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  sprite_shader.wgsl
src/sound/: context.rs  controller.rs  mod.rs
src/sound/bindings/: dummy_snd.rs  mod.rs  quad_linux_snd.rs
src/utils/: debug_ecs.rs  file.rs  frame_limiter.rs  legion_ext.rs  logger.rs  maths.rs  mod.rs  time.rs  window.rs
(+72 files in other folders)
