[package]
name = "scion"
version = "0.5.0"
authors = ["grzi <jeremy.thulliez@gmail.com>"]
edition = "2018"
description = "Game making library on top of wgpu, winit, legion"
documentation = "https://docs.rs/scion"
keywords = ["game", "library", "engine"]
repository = "https://github.com/grzi/scion/"
license = "MIT OR Apache-2.0"
resolver = "2"

[features]
parallel = ["legion/parallel"]
hot-reload = []

[dependencies]
legion = { version = "0.4", default-features = false, features = ["codegen"] }
atomic_refcell = "0.1.6"

# window & rendering
winit = "0.25"
wgpu = { version = "0.10", features = ["spirv"] }
futures = "0.3"

# maths
ultraviolet = "0.8"

# serialization
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
bytemuck = { version = "1.7", features = ["derive"] }
image = { version = "0.23", default-features = false, features = ["png"] }

# logging
log = { version = "0.4.14", features = ["serde"] }
fern = { version = "0.6.0", features = ["colored"] }

# sound
audrey = { version = "0.3.0", default-features = false, features = ["ogg_vorbis"] }

[target.'cfg(target_os = "linux")'.dependencies]
quad-alsa-sys = "0.3.2"
libc = "0.2"

[profile.dev.package]
image = { opt-level = 3 }
png = { opt-level = 3 }
bitflags = { opt-level = 3 }
bytemuck = { opt-level = 3 }
byteorder = { opt-level = 3 }
miniz_oxide = { opt-level = 3 }
adler32 = { opt-level = 3 }
deflate = { opt-level = 3 }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
#shaderc = "0.7"

[dev-dependencies]
rand = "0.8.4"