[package]
name = "scion"
version = "0.6.0"
authors = ["grzi <jeremy.thulliez@gmail.com>"]
edition = "2018"
description = "Game making library on top of wgpu, winit, hecs"
documentation = "https://docs.rs/scion"
keywords = ["game", "library", "engine"]
repository = "https://github.com/grzi/scion/"
license = "MIT OR Apache-2.0"
resolver = "2"

[features]
hot-reload = []

[dependencies]
atomic_refcell = "0.1.6"
hecs = "0.9"
downcast-rs = "1.2.0"

# window & rendering
winit = "0.27"
wgpu = { version = "0.14.2", features = ["spirv"] }
ab_glyph = "0.2.20"
futures = "0.3"

# maths
ultraviolet = "0.8"

# serialization
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
bytemuck = { version = "1.7", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }

# logging
log = { version = "0.4.14", features = ["serde"] }
fern = { version = "0.6.0", features = ["colored"] }

# sound
rodio = "0.16.0"

[profile.dev.package]
image = { opt-level = 3 }
png = { opt-level = 3 }
bitflags = { opt-level = 3 }
bytemuck = { opt-level = 3 }
byteorder = { opt-level = 3 }
miniz_oxide = { opt-level = 3 }
adler32 = { opt-level = 3 }
deflate = { opt-level = 3 }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
#shaderc = "0.7"

[dev-dependencies]
rand = "0.8.4"