[package]
name = "scion"
version = "0.8.0"
authors = ["grzi <jeremy.thulliez@gmail.com>"]
edition = "2018"
description = "Game making library on top of wgpu, winit, hecs"
documentation = "https://docs.rs/scion"
keywords = ["game", "library", "engine"]
repository = "https://github.com/grzi/scion/"
license = "MIT OR Apache-2.0"
resolver = "2"

[features]
hot-reload = []

[dependencies]
atomic_refcell = "0.1.13"
hecs = "0.10.4"
downcast-rs = "1.2.0"

# window & rendering
winit = {version = "0.29", features = ["rwh_05"]}
wgpu = { version = "0.19.3" }
ab_glyph = "0.2.23"
futures = "0.3"

# maths
ultraviolet = "0.9"
geo-types = "0.7.13"
geo-clipper = "0.8.0"
spin_sleep= "1.2.0"

# serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
bytemuck = { version = "1.14", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }
base64 = "0.22.0"

# logging
log = { version = "0.4.21", features = ["serde"] }
fern = { version = "0.6.2", features = ["colored"] }

# sound
rodio = "0.17"

measure_time = "0.8"

[profile.dev.package]
image = { opt-level = 3 }
png = { opt-level = 3 }
bitflags = { opt-level = 3 }
bytemuck = { opt-level = 3 }
byteorder = { opt-level = 3 }
miniz_oxide = { opt-level = 3 }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dev-dependencies]
rand = "0.8.4"

[profile.release]
debug = true
